[project]
name = "clouddrift-binning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "clouddrift>=0.46.0",
    "cmocean>=4.0.3",
    "ipykernel>=6.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
